src/objects/CS_ByPass__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ByPass from Triggers,WF Rules and Validation Rules</description>
    <fields>
        <fullName>CS_Batch_Context__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ByPass from Trigger</inlineHelpText>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Disable_ValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ByPass from Validation Rules</description>
        <label>Disable ValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Disable_WF_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass from WF Rules</description>
        <label>Disable WF Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Use_Standard_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asset Data Migration for GW Community</description>
        <label>Use Standard Product</label>
        <type>Checkbox</type>
    </fields>
    <label>GW ByPass</label>
</CustomObject>